--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,6 @@ description = ""
 authors = ["hoshi23"]
 readme = "README.md"
 packages = [
-    { include = "trainer_base"},
     { include = "trainers"},
     { include = "datasets"},
     { include = "utils"},
@@ -31,16 +30,13 @@ transformers = "^4.44.0"
 matplotlib = "^3.9.2"
 pandas = "1.5.3"
 numpy = "1.26.4"
+tabulate = "^0.9.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 
-[[tool.poetry.source]]
-name = "tsnecuda"
-url = "https://tsnecuda.isx.ai/tsnecuda_stable.html"
-priority = "secondary" 
 
 [[tool.poetry.source]]
 name = "pypi-public"
